examples/deploy-with-kubernetes/service-with-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: bento-example
  namespace: default
  labels:
    name: bento-example
    app: bento-example

spec:
  ports:
    - port: 80 
      name: http
      protocol: TCP
      targetPort: 5000
  selector:
    name: bento-example
  type: ClusterIP



---


apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bento-example-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 10g
spec:
  rules:
    - host: HOST_NAME
      http:
        paths:
          - path: /predict
            backend:
              serviceName: bento-example
              servicePort: 80
